# slack-github-tracker

./: DEVELOPMENT.rst  README.rst  alembic.ini  mypy.ini  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: ci.yml  lint.yml  release.yml
helpers/: pyproject.toml
slack_github_tracker/: __init__.py  _handlers.py  _interpret.py  cli.py  http_server.py  protocols.py
slack_github_tracker/alembic/: env.py
slack_github_tracker/alembic/versions/: 08f02b305a4d_.py  20241208202007_fbff914b112f_.py  20241208203002_d157e7e0d512_.py
slack_github_tracker/events/: __init__.py  _handler.py  _protocols.py
slack_github_tracker/handlers/: __init__.py
slack_github_tracker/handlers/background/: __init__.py  _protocols.py  _tasks.py
slack_github_tracker/handlers/github/: __init__.py  _errors.py  _event.py  _handler.py  _hooks.py  _protocols.py
slack_github_tracker/handlers/github/_interpret/: __init__.py  _interpret.py  _pull_request.py  _pull_request_review.py
slack_github_tracker/handlers/server/: __init__.py  _handlers.py
slack_github_tracker/handlers/slack/: __init__.py  _handlers.py  _interpret.py  _protocols.py  _tracking.py
slack_github_tracker/storage/: __init__.py  _metadata.py  _protocols.py  _prs.py  _requests.py  _storage.py
tests/: conftest.py  test_works.py
tests/fixtures/github/: closed-merged  closed-nomerge  converted_to_draft  dismissed-collab  dismissed-owner  opened  opened-revert  ready_for_review  reopened  submitted-approve  submitted-changes_requested-collab  submitted-commented-collab  submitted-commented-owner
tests/handlers/background/: test_tasks.py
tests/handlers/slack/: test_interpret.py  test_tracking.py
tools/: pyproject.toml  requirements.uv.txt  run.py
